<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.explore.ExploreFragment">


<!--    <TextView-->
<!--        android:id="@+id/text_explore"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="5dp"
        android:background="@color/grey"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_hint"
        app:defaultQueryHint="@string/search_hint"


        />

    <!--displaying a radio group on below line-->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/costRBtn"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:text="low to high"
            android:textAlignment="center"
            android:scaleX="0.55"
            android:scaleY="0.55"
            android:buttonTint="@color/black"
            android:textSize="20sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/distRBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="closest to farthest"
            android:textAlignment="center"
            android:scaleX="0.55"
            android:scaleY="0.55"
            android:buttonTint="@color/black"
            android:textSize="20sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/dateRBtn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="soonest"
            android:scaleX="0.55"
            android:scaleY="0.55"
            android:textAlignment="center"
            android:buttonTint="@color/black"
            android:textSize="20sp" />

        <!--adding a radio button -->
        <RadioButton
            android:id="@+id/alphRBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:text="a to z"
            android:scaleX="0.55"
            android:scaleY="0.55"
            android:textAlignment="center"
            android:buttonTint="@color/black"
            android:textSize="20sp" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/linearLayout1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="10dp"
            android:layout_height="5dp" />
        <ImageButton
            android:id="@+id/noCat"
            android:background="@drawable/roundbtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_do_not_disturb_alt_24" />
        <TextView
            android:layout_width="15dp"
            android:layout_height="5dp" />
        <ImageButton
            android:id="@+id/sportsCat"
            android:layout_width="50dp"
            android:background="@drawable/roundbtn"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_sports_basketball_24" />
        <TextView
            android:layout_width="15dp"
            android:layout_height="5dp" />
        <ImageButton
            android:id="@+id/musicCat"
            android:layout_width="50dp"
            android:background="@drawable/roundbtn"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_music_note_24"
            />
        <TextView
            android:layout_width="15dp"
            android:layout_height="5dp" />
        <ImageButton
            android:id="@+id/foodCat"
            android:layout_width="50dp"
            android:background="@drawable/roundbtn"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_fastfood_24"
            />
        <TextView
            android:layout_width="15dp"
            android:layout_height="5dp" />
        <ImageButton
            android:id="@+id/movieCat"
            android:layout_width="50dp"
            android:background="@drawable/roundbtn"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_local_movies_24"
            />
        <TextView
            android:layout_width="15dp"
            android:layout_height="5dp" />
        <ImageButton
            android:id="@+id/healthCat"
            android:layout_width="50dp"
            android:background="@drawable/roundbtn"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_directions_run_24"
            />
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:paddingBottom="50dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>



</LinearLayout>