<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/graident_background"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="80dp"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/profile_image" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="294dp"
        android:layout_height="182dp"
        android:contentDescription="@string/logo"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_centerInParent="true"
        android:text="namee"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dob_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:hint="@string/dob"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_profile"
        />

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/prompt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:text="@string/signin_prompt"
        android:layout_marginLeft="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Sign In"
        android:onClick="sendLogin"
        app:layout_constraintTop_toBottomOf="@id/prompt1"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/prompt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="135dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/create_prompt"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Create Account"
        android:onClick="sendRegister"
        app:layout_constraintTop_toBottomOf="@id/prompt2"
        />

    <Button
        android:id="@+id/uploadPhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_centerInParent="true"
        android:text="Upload Profile Picture"
        android:onClick="uploadPicture"
        />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_centerInParent="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Sign Out"
        android:onClick="signOut"
        />

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:hint="@string/upcomingEvents"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_profile"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfile"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="5dp"
        android:paddingBottom="50dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>



</LinearLayout>

    </ScrollView>